2008-06-13  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Some changes in the vb.net dom parser.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml: Bump MD version.

2008-05-28  Mike Krüger <mkrueger@novell.com> 

	* VBNetBinding.addin.xml, Parser/DomParser.cs: Worked on vb.net dom
	  parser.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* VBNetBinding.mdp, Parser/DomParser.cs, Makefile.am: Added new dom
	  parser for vb.net.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* VBBindingCompilerServices.cs, VBLanguageBinding.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs, Gui/CodeGenerationPanelWidget.cs,
	  VBNetBinding.addin.xml, VBNetBinding.mdp, VBNetBinding.mds,
	  VBBindingCompilerServices.cs, Project/VBCompilerParameters.cs,
	  Project/VBNetResourceIdBuilder.cs, gtk-gui/objects.xml,
	  gtk-gui/gui.stetic, Makefile.am: New project model changes.

2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 

	* VBNetBinding.addin.xml: Set "isText" attribute on the mimetype
	  definitions.

2008-04-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Don't check using's region, since it is the
	  region of the using declaration only.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 
